@@ -1,3 +1,4 @@
+* Add support for pyson_order on action window
 * Make datetimepicker locale aware
 * Restore tab default order when no manual change
 * Add support for column sorting
